--- a/.env
+++ b/.env
@@ -3,3 +3,10 @@ DB_USER=root
 DB_PASS=
 DB_NAME=his_hospital
 PORT=3000
+#DB_HOST=gondola.proxy.rlwy.net
+#DB_USER=root
+#DB_PASS=KaGjHpuXUElTKfTHoEjKYKOpXVaBDpCD
+#DB_NAME=railway
+#DB_PORT=35897
+
+#PORT=
