Limpieza del codigo

--- a/.env
+++ b/.env
@@ -1,12 +1,8 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=
-DB_NAME=his_hospital
-PORT=3000
-#DB_HOST=gondola.proxy.rlwy.net
-#DB_USER=root
-#DB_PASS=KaGjHpuXUElTKfTHoEjKYKOpXVaBDpCD
-#DB_NAME=railway
-#DB_PORT=35897
 
-#PORT=
+DB_HOST=ballast.proxy.rlwy.net
+DB_USER=root
+DB_PASS=ODSSaAxWKUIyCaqphUaupranHsndFDxg
+DB_NAME=railway
+DB_PORT=20024
+
+PORT=3000
